deploys/basic-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: cafe-ingress
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: external
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - ${APP_NAME}.${TLD}
    secretName: cafe-secret
  rules:
  - host: ${APP_NAME}.${TLD}
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: cafe-svc
          servicePort: 80
